<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.orangeplayer</groupId>
    <artifactId>muplayer</artifactId>
    <version>3.2.1</version>
    <packaging>jar</packaging>

    <name>muplayer</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
    </properties>

    <developers>
        <developer>
            <name>Martin Pizarro Ascui</name>
            <email>martinpiz097@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>


            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-Xmx64M</argLine>
                    <argLine>-Xms32M</argLine>
                </configuration>
            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.muplayer.main.MuPlayer</mainClass>
                        </manifest>
                    </archive>
                    <!--<includes>
                        <include>**/service/*</include>
                    </includes>-->
                </configuration>
            </plugin>

            <!--Con Dependencias dentro -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>${artifactId}</finalName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.muplayer.main.MuPlayer</mainClass>
                </configuration>
            </plugin>

            <!--Dependencias fuera-->
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://clojars.org/repo</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <!--<repository>
            <id>in-project</id>
            <name>In Project Repo</name>
            <url>file://${project.basedir}/repo</url>
        </repository>-->
    </repositories>

    <distributionManagement>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://clojars.org/repo</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.aucom</groupId>
            <artifactId>aucom</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>org.bytebuffer</groupId>
            <artifactId>bytebuffer</artifactId>
            <version>0.2.1</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.orangeplayer</groupId>
            <artifactId>logger</artifactId>
            <version>0.4.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.gitlab.9lukas5/jaad -->
        <dependency>
            <groupId>com.gitlab.9lukas5</groupId>
            <artifactId>jaad</artifactId>
            <version>0.8.8</version>
        </dependency>

        <dependency>
            <groupId>com.gitlab.audiolibs</groupId>
            <artifactId>tritonus-jorbis</artifactId>
            <version>0.3.7</version>
        </dependency>

        <dependency>
            <groupId>com.gitlab.audiolibs</groupId>
            <artifactId>jspeex-codec</artifactId>
            <version>0.9.8</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>mp3spi</artifactId>
            <version>1.9.5.4</version>
        </dependency>

        <dependency>
            <groupId>org.jflac</groupId>
            <artifactId>jflac-codec</artifactId>
            <version>1.5.2</version>
        </dependency>

        <dependency>
            <groupId>net.jthink</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>3.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

</project>
